Fix close icon on dark mode

--- a/src/common/CloseButton.module.css
+++ b/src/common/CloseButton.module.css
@@ -1,5 +1,6 @@
 .button {
 	background: none;
+	color: inherit;
 	border: 0;
 	opacity: 0.5;
 	padding: 0;
