--- a/src/common/CloseIcon.module.css
+++ b/src/common/CloseIcon.module.css
@@ -1,4 +1,4 @@
 .svg {
 	display: block;
-	fill: var(--body-text-color);
+	fill: currentColor;
 }
